@@ -3,9 +3,9 @@ Kafka集群部署
 一、 集群规划
 ---
 ```
-node001			node002			node003
-zk			zk			zk
-kafka			kafka		  	kafka
+node001                 node002                 node003
+zk                      zk                      zk
+kafka                   kafka                   kafka
 ```
 jar包下载 http://kafka.apache.org/downloads.html   
 
@@ -190,13 +190,15 @@ $ bin/kafka-console-producer.sh --broker-list node001:9092 --topic first
 
 5）消费消息    
 ```
+老版本
 $ bin/kafka-console-consumer.sh --zookeeper node001:2181 --topic first
 $ bin/kafka-console-consumer.sh --zookeeper node001:2181 --from-beginning --topic first
-
+新版本
 $ bin/kafka-console-consumer.sh --bootstrap-server node001:9092 --from-beginning --topic first
 $ bin/kafka-console-consumer.sh --bootstrap-server node001:9092 --from-beginning --topic first
 ```
 - --from-beginning 读取主题中所有的数据
+注意： --zookeeper已经被弃用 改为 --bootstrap-server参数  
 
 6）查看某个Topic的详情  
 ```
@@ -208,8 +210,6 @@ $ bin/kafka-topics.sh --topic first --describe --zookeeper node001:2181
 $  bin/kafka-topics.sh  --zookeeper hadoop102:2181 --alter --topic first --partitions 6
 ```
 
-注意： --zookeeper已经被弃用 改为 --bootstrap-server参数
-===
 
 六、验证kafka用户密码
 ---
@@ -284,3 +284,72 @@ group.id=test001
 查看node001和node002的接收者。
 同一时刻只有一个消费者接收到消息。
 ```
+
+
+Kafka  监控
+===
+Kafka Eagle
+---
+
+1、修改 kafka-server-start.sh 命令中
+```
+if [ "x$KAFKA_HEAP_OPTS" = "x" ]; then
+export KAFKA_HEAP_OPTS="-Xmx1G -Xms1G"
+fi
+为
+if [ "x$KAFKA_HEAP_OPTS" = "x" ]; then
+export KAFKA_HEAP_OPTS="-server -Xms2G -Xmx2G -XX:PermSize=128m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:ParallelGCThreads=8 -XX:ConcGCThreads=5 -XX:InitiatingHeapOccupancyPercent=70"
+export JMX_PORT="9999"
+#export KAFKA_HEAP_OPTS="-Xmx1G -Xms1G"
+fi
+```
+
+2、部署
+```
+$  tar  -zxvf  kafka-eagle-bin-1.3.7.tar.gz
+进入刚才解压的目录
+$ tar -zxvf kafka-eagle-web-1.3.7-bin.tar.gz -C /opt/module/
+$ mv kafka-eagle-web-1.3.7/ eagle
+给启动文件执行权限
+$ cd bin/ && chmod 777 ke.sh
+```
+
+3、修改配置文件
+```
+######################################
+# multi zookeeper&kafka cluster list
+######################################
+kafka.eagle.zk.cluster.alias=cluster1
+cluster1.zk.list=hadoop102:2181,hadoop103:2181,hadoop104:2181
+######################################
+# kafka offset storage
+######################################
+cluster1.kafka.eagle.offset.storage=kafka
+######################################
+# enable kafka metrics
+######################################
+kafka.eagle.metrics.charts=true
+kafka.eagle.sql.fix.error=false
+######################################
+# kafka jdbc driver address
+######################################
+kafka.eagle.driver=com.mysql.jdbc.Driver
+kafka.eagle.url=jdbc:mysql://hadoop102:3306/ke?useUnicode=true&ch
+aracterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+kafka.eagle.username=root
+kafka.eagle.password=000000
+```
+
+4、添加环境变量
+```
+export KE_HOME=/opt/module/eagle
+export PATH=$PATH:$KE_HOME/bin
+```
+
+5、启动
+```
+$ bin/ke.sh start
+```
+
+6、登录页面展示
+http://IP:8048/ke
